fix: inventory footer layout - bigger card, smaller preview, wrapping buttons

--- a/src/App.scss
+++ b/src/App.scss
@@ -50,8 +50,8 @@ $toolbar-height: 55px;
 $achievement-width: 375px;
 $achievement-height: 405px;
 
-$inventory-width: 560px;
-$inventory-height: 480px;
+$inventory-width: 620px;
+$inventory-height: 520px;
 
 $navigator-width: 540px;
 $navigator-height: 560px;
